[gd_scene load_steps=20 format=3 uid="uid://ddtcqs8umwa0d"]

[ext_resource type="Script" path="res://scenes/tutorial/tutorial.gd" id="1_0rqu3"]
[ext_resource type="Shader" path="res://resources/shaders/blur.gdshader" id="1_yvtyf"]
[ext_resource type="Texture2D" uid="uid://ba2sskb340frj" path="res://assets/background-book/right_page_background.png" id="2_b43lx"]
[ext_resource type="Texture2D" uid="uid://rrtkvphfe0qs" path="res://assets/category-icons/animals.png" id="3_gj4hn"]
[ext_resource type="Theme" uid="uid://cfnbb06x7c6ff" path="res://resources/themes/text.tres" id="4_4tk08"]
[ext_resource type="Texture2D" uid="uid://drcovm1q645ew" path="res://assets/category-icons/human.png" id="4_mdm3t"]
[ext_resource type="Texture2D" uid="uid://bpwc7eswlvxvx" path="res://assets/category-icons/emotions.png" id="5_ys08x"]
[ext_resource type="Texture2D" uid="uid://d3rvmd6nrhfba" path="res://assets/category-icons/natural_disasters.png" id="6_er2vv"]
[ext_resource type="Texture2D" uid="uid://ltokwdkxg2ww" path="res://assets/frame/category-frame.png" id="7_dhev4"]
[ext_resource type="Texture2D" uid="uid://b6ymcnx43b2b0" path="res://assets/element-icons/love.png" id="8_ieiyc"]
[ext_resource type="Shader" path="res://resources/shaders/select_element.gdshader" id="9_g3xcq"]
[ext_resource type="Texture2D" uid="uid://bm2koh34t0jo" path="res://assets/element-icons/soul.png" id="10_ug5da"]
[ext_resource type="Shader" path="res://resources/shaders/grey_out.gdshader" id="12_xbyni"]
[ext_resource type="Texture2D" uid="uid://cg0u06lr683q5" path="res://assets/folklore/succubus.png" id="13_ln2wn"]
[ext_resource type="Texture2D" uid="uid://cxrkvqdiyp2bc" path="res://assets/category-icons/all_categories.png" id="15_hytbo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_su023"]
shader = ExtResource("1_yvtyf")
shader_parameter/blur_radius = 1.0
shader_parameter/blur_amount = 5.0
shader_parameter/blur_inner = 0.082
shader_parameter/blur_outer = 0.48

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0mpfr"]
texture = ExtResource("7_dhev4")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m4nyf"]
resource_local_to_scene = true
shader = ExtResource("9_g3xcq")
shader_parameter/circle_width = 1.0
shader_parameter/wait_time = 0.6
shader_parameter/speed = 1.5
shader_parameter/alpha_boost = 1.0
shader_parameter/in_color = Vector3(0.785, 1.32, -0.29)
shader_parameter/is_turn_on = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a2t1l"]
resource_local_to_scene = true
shader = ExtResource("12_xbyni")
shader_parameter/is_visible = true

[node name="Tutorial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_0rqu3")

[node name="Shader" type="Panel" parent="."]
material = SubResource("ShaderMaterial_su023")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -377.5
offset_top = -493.5
offset_right = 377.5
offset_bottom = 493.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_b43lx")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -318.0
offset_top = -436.0
offset_right = 288.0
offset_bottom = 484.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(606, 840)
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_4tk08")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
text = "Добро пожаловать!"
horizontal_alignment = 1

[node name="Text1" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(606, 110)
layout_mode = 2
theme = ExtResource("4_4tk08")
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Наша игра это алхимик, только получаем мы [color=green]фольклоры[/color]! В игре есть [color=green]четыре категории[/color], каждая со своими элементами:[/center]
"
scroll_active = false
context_menu_enabled = true

[node name="CategoryExample" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
theme_override_constants/separation = 1

[node name="Animals" type="Control" parent="CenterContainer/VBoxContainer/CategoryExample"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/CategoryExample/Animals"]
custom_minimum_size = Vector2(125, 125)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_gj4hn")
expand_mode = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CategoryExample/Animals"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 55.0
offset_right = 51.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_4tk08")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Животные"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Human" type="Control" parent="CenterContainer/VBoxContainer/CategoryExample"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/CategoryExample/Human"]
custom_minimum_size = Vector2(125, 125)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_mdm3t")
expand_mode = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CategoryExample/Human"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 55.0
offset_right = 51.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_4tk08")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Человек
"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Emotions" type="Control" parent="CenterContainer/VBoxContainer/CategoryExample"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/CategoryExample/Emotions"]
custom_minimum_size = Vector2(125, 125)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_ys08x")
expand_mode = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CategoryExample/Emotions"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 55.0
offset_right = 51.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_4tk08")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Эмоции
"
horizontal_alignment = 1
vertical_alignment = 2

[node name="NaturalDisasters" type="Control" parent="CenterContainer/VBoxContainer/CategoryExample"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/CategoryExample/NaturalDisasters"]
custom_minimum_size = Vector2(125, 125)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_er2vv")
expand_mode = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CategoryExample/NaturalDisasters"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 55.0
offset_right = 51.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_4tk08")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Катаклизмы"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Text2" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
theme = ExtResource("4_4tk08")
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "
[center]Игровое поле разделено на две страницы.
На одной странице можно выбрать[color=green] один элемент[/color].
Выбор элемента показан зеленым эффектом:[/center]"
scroll_active = false

[node name="ElementsExample" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(606, 90)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="LoveExample" type="PanelContainer" parent="CenterContainer/VBoxContainer/ElementsExample"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_0mpfr")

[node name="ShaderPulsarFirst" type="PanelContainer" parent="CenterContainer/VBoxContainer/ElementsExample/LoveExample"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_m4nyf")
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_0mpfr")

[node name="Element1" type="TextureRect" parent="CenterContainer/VBoxContainer/ElementsExample/LoveExample/ShaderPulsarFirst"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("8_ieiyc")
expand_mode = 1

[node name="Plus" type="Label" parent="CenterContainer/VBoxContainer/ElementsExample"]
layout_mode = 2
theme = ExtResource("4_4tk08")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "+"

[node name="SoulExample" type="PanelContainer" parent="CenterContainer/VBoxContainer/ElementsExample"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_0mpfr")

[node name="ShaderPulsarSecond" type="PanelContainer" parent="CenterContainer/VBoxContainer/ElementsExample/SoulExample"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_m4nyf")
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_0mpfr")

[node name="Element2" type="TextureRect" parent="CenterContainer/VBoxContainer/ElementsExample/SoulExample/ShaderPulsarSecond"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("10_ug5da")
expand_mode = 1

[node name="Plus2" type="Label" parent="CenterContainer/VBoxContainer/ElementsExample"]
layout_mode = 2
theme = ExtResource("4_4tk08")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "="

[node name="FolkloreIcon" type="TextureRect" parent="CenterContainer/VBoxContainer/ElementsExample"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_a2t1l")
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("13_ln2wn")
expand_mode = 1
stretch_mode = 4

[node name="Text3" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(606, 75)
layout_mode = 2
theme = ExtResource("4_4tk08")
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Найдите эти элементы в категориях и откройте первый [color=green] фольклор[/color]![/center]"
scroll_active = false

[node name="Exit" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.222
anchor_top = 0.024
anchor_right = 0.222
anchor_bottom = 0.024
offset_left = -0.240021
offset_top = 0.0799999
offset_right = 159.76
offset_bottom = 160.08
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_4tk08")
texture_normal = ExtResource("15_hytbo")
stretch_mode = 5
